Updated dox files and added PDF manual.

--- a/xpc_basic/doc/dox/doxygen.cfg
+++ b/xpc_basic/doc/dox/doxygen.cfg
@@ -59,7 +59,7 @@
 #
 #---------------------------------------------------------------------------
 
-PROJECT_NAME           = "XPC Basic Libraries User Manual"
+PROJECT_NAME           = "XPC Basic Libraries Manual"
 
 #---------------------------------------------------------------------------
 # The PROJECT_NUMBER tag can be used to enter a project or revision number.
@@ -67,7 +67,7 @@ PROJECT_NAME           = "XPC Basic Libraries User Manual"
 # if some version control system is used.
 #---------------------------------------------------------------------------
 
-PROJECT_NUMBER         = 1.1.0
+PROJECT_NUMBER         = 1.1.3
 
 #---------------------------------------------------------------------------
 # The OUTPUT_DIRECTORY tag is used to specify the (relative or absolute)
@@ -330,8 +330,8 @@ ALIASES =   \
    "inline=<i>inlined</i>"                                          \
    "install=\par <b>Installation:</b>\n"                            \
    "intro=\par <b>Introduction:</b>\n"                              \
-   "library=\par <b>Library:</b>\n"                                 \
-   "license=\par <b>License:</b>\n"                                 \
+   "library=\par <b>Library:</b>"                                   \
+   "license=\par <b>License:</b>"                                   \
    "linux=\par <b>Linux:</b>\n"                                     \
    "macosx=\par <b>Mac OSX:</b>\n"                                  \
    "macro=\par <b>Macro:</b>\n"                                     \
@@ -380,7 +380,7 @@ ALIASES =   \
 # list of all members will be omitted, etc.
 #---------------------------------------------------------------------------
 
-OPTIMIZE_OUTPUT_FOR_C  = YES
+OPTIMIZE_OUTPUT_FOR_C  = NO
 
 #---------------------------------------------------------------------------
 #  Set the OPTIMIZE_OUTPUT_JAVA tag to YES if your project consists of Java
@@ -552,7 +552,7 @@ SORT_BY_SCOPE_NAME     = NO
 # documentation.
 #---------------------------------------------------------------------------
 
-GENERATE_TODOLIST      = YES
+GENERATE_TODOLIST      = NO
 
 #---------------------------------------------------------------------------
 # The GENERATE_TESTLIST tag can be used to enable (YES) or disable (NO) the
@@ -560,7 +560,7 @@ GENERATE_TODOLIST      = YES
 # documentation.
 #---------------------------------------------------------------------------
 
-GENERATE_TESTLIST      = YES
+GENERATE_TESTLIST      = NO
 
 #---------------------------------------------------------------------------
 # The GENERATE_BUGLIST tag can be used to enable (YES) or disable (NO) the
@@ -733,26 +733,27 @@ WARN_LOGFILE           = "dox-warnings.log"
 # following is used.  We'd really like to be able to control the page
 # ordering.
 #
+# ./xpc_subversion.dox
+# ./xpc_git_subversion_bridge.dox
+#
 #---------------------------------------------------------------------------
 
 INPUT = \
  ./xpc_suite.dox \
- ./xpc_license.dox \
- ./xpc_automake.dox \
- ./xpc_subversion.dox \
- ./xpc_git.dox \
- ./xpc_git_subversion_bridge.dox \
- ./debugging/xpc_debugging.dox \
- ./debugging/xpc_coverage_profiling.dox \
- ./debian/xpc_debian.dox \
  ./xpc/xpc.dox \
  ./xpc++/xpc++.dox \
  ./xpchello/xpc_hello.dox \
  ./xpchello/xpc_internationalization.dox \
  ./xpchello/xpc_linkage.dox \
+ ./xpc_automake.dox \
+ ./debugging/xpc_debugging.dox \
+ ./debugging/xpc_coverage_profiling.dox \
+ ./debian/xpc_debian.dox \
+ ./xpc_git.dox \
  ./xpc_mingw.dox \
+ ./xpc_nice_classes.dox \
  ./xpc_philosophy.dox \
- ./xpc_nice_classes.dox
+ ./xpc_license.dox
 
 #---------------------------------------------------------------------------
 # If the value of the INPUT tag contains directories, you can use the
